Solve issue of text overflowing

--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,7 @@ body {
 .display-score {
   border: 1.5px solid #333;
   margin-top: 20px;
+  word-break: break-all;
 }
 
 .display-score ul {
@@ -61,6 +62,7 @@ body {
   flex-direction: column;
   padding: 0;
   list-style-type: none;
+  text-overflow: ellipsis;
 }
 
 li {
